upgrade to spring boot 4.0.7 / java 21 / spring cloud 2025.1.2 / sca 2025.1.0.0